--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,15 @@ jobs:
     working_directory: ~/infraops
     steps:
       - checkout
+      - run: git submodule sync
+      - run: git submodule update --init
+      - run: make dep
+      - run: make lint
+      - run: make sec
+      - run: make specs
+      - run: make goveralls
+      - store_artifacts:
+          path: test/reports
       - pulumi/login
       - pulumi/preview:
           stack: alexfalkowski/gh/prod
@@ -21,6 +30,8 @@ jobs:
     working_directory: ~/infraops
     steps:
       - checkout
+      - run: git submodule sync
+      - run: git submodule update --init
       - pulumi/login
       - pulumi/update:
           stack: alexfalkowski/gh/prod
@@ -33,10 +44,11 @@ workflows:
     jobs:
       - preview:
           context: gh
+          filters:
+            branches:
+              ignore: master
       - update:
           context: gh
-          requires:
-            - preview
           filters:
             branches:
               only: master
