--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,8 @@ workflows:
       - build
       - preview:
           context: infraops
+          requires:
+            - build
           filters:
             branches:
               ignore: master
