--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,70 +1,16 @@
 version: 2.1
 
-orbs:
-  pulumi: pulumi/pulumi@2.1.0
+setup: true
 
-jobs:
-  build:
-    docker:
-      - image: alexfalkowski/go:1.21-ruby
-    working_directory: ~/infraops
-    steps:
-      - checkout
-      - run: git submodule sync
-      - run: git submodule update --init
-      - run: make dep
-      - run: make lint
-      - run: make sec
-      - run: make specs
-      - run: make goveralls
-      - store_artifacts:
-          path: test/reports
-    resource_class: large
-  preview:
-    docker:
-      - image: alexfalkowski/go:1.21-ruby
-    working_directory: ~/infraops
-    steps:
-      - checkout
-      - run: git submodule sync
-      - run: git submodule update --init
-      - run: make dep
-      - pulumi/login
-      - pulumi/preview:
-          stack: alexfalkowski/gh/prod
-          working_directory: ~/infraops/gh
-    resource_class: large
-  update:
-    docker:
-      - image: alexfalkowski/release:3.1
-    working_directory: ~/infraops
-    steps:
-      - checkout
-      - run: git submodule sync
-      - run: git submodule update --init
-      - run: make dep
-      - pulumi/login
-      - pulumi/update:
-          stack: alexfalkowski/gh/prod
-          working_directory: ~/infraops/gh
-      - run: release
-    resource_class: large
+orbs:
+  path_filtering: circleci/path-filtering@1.0.0
 
 workflows:
-  infraops:
+  filter:
     jobs:
-      - build
-      - preview:
-          context: infraops
-          requires:
-            - build
-          filters:
-            branches:
-              ignore: master
-      - update:
-          context: infraops
-          requires:
-            - build
-          filters:
-            branches:
-              only: master
+      - path_filtering/filter:
+          mapping: |
+            gh/.* gh true
+            go.* gh true
+          base-revision: origin/master
+          resource_class: large
