--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -27,9 +27,18 @@ jobs:
           key: infraops-cache-{{ checksum "go.sum" }}
           paths:
             - /home/circleci/go/pkg/mod
+      - restore_cache:
+          name: restore go build cache
+          keys:
+            - infraops-go-build-cache-{{ checksum "go.sum" }}
       - run: make lint
       - run: make sec
       - run: make specs
+      - save_cache:
+          name: save go build cache
+          key: infraops-go-build-cache-{{ checksum "go.sum" }}
+          paths:
+            - /home/circleci/.cache/go-build
       - run: make goveralls
       - store_artifacts:
           path: test/reports
