build(ci): change cache key

--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -20,11 +20,11 @@ jobs:
       - restore_cache:
           name: restore deps
           keys:
-            - infraops-cache-{{ checksum "go.sum" }}
+            - infraops-go-cache-{{ checksum "go.sum" }}
       - run: make dep
       - save_cache:
           name: save deps
-          key: infraops-cache-{{ checksum "go.sum" }}
+          key: infraops-go-cache-{{ checksum "go.sum" }}
           paths:
             - /home/circleci/go/pkg/mod
       - restore_cache:
