--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -41,7 +41,7 @@ jobs:
           key: infraops-go-build-cache-{{ checksum "go.sum" }}
           paths:
             - /home/circleci/.cache/go-build
-      - run: make func-coverage
+      - run: make html-coverage
       - store_test_results:
           path: test/reports
       - store_artifacts:
