--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -7,6 +7,9 @@ parameters:
   cf:
     type: boolean
     default: false
+  do:
+    type: boolean
+    default: false
 
 orbs:
   pulumi: pulumi/pulumi@2.1.0
@@ -58,54 +61,7 @@ jobs:
       - checkout
       - run: release
     resource_class: large
-  gh_preview:
-    docker:
-      - image: alexfalkowski/go:1.22-ruby
-    working_directory: ~/infraops
-    steps:
-      - checkout
-      - run: git submodule sync
-      - run: git submodule update --init
-      - restore_cache:
-          name: restore deps
-          keys:
-            - infraops-go-cache-{{ checksum "go.sum" }}
-            - infraops-go-cache-
-      - run: make dep
-      - save_cache:
-          name: save deps
-          key: infraops-go-cache-{{ checksum "go.sum" }}
-          paths:
-            - /home/circleci/go/pkg/mod
-      - pulumi/login
-      - pulumi/preview:
-          stack: alexfalkowski/gh/prod
-          working_directory: ~/infraops/area/gh
-    resource_class: large
-  gh_update:
-    docker:
-      - image: alexfalkowski/release:3.1
-    working_directory: ~/infraops
-    steps:
-      - checkout
-      - run: git submodule sync
-      - run: git submodule update --init
-      - restore_cache:
-          name: restore deps
-          keys:
-            - infraops-go-cache-{{ checksum "go.sum" }}
-            - infraops-go-cache-
-      - run: make dep
-      - save_cache:
-          name: save deps
-          key: infraops-go-cache-{{ checksum "go.sum" }}
-          paths:
-            - /home/circleci/go/pkg/mod
-      - pulumi/login
-      - pulumi/update:
-          stack: alexfalkowski/gh/prod
-          working_directory: ~/infraops/area/gh
-    resource_class: large
+
   cf_preview:
     docker:
       - image: alexfalkowski/go:1.22-ruby
@@ -155,6 +111,104 @@ jobs:
           working_directory: ~/infraops/area/cf
     resource_class: large
 
+  do_preview:
+    docker:
+      - image: alexfalkowski/go:1.22-ruby
+    working_directory: ~/infraops
+    steps:
+      - checkout
+      - run: git submodule sync
+      - run: git submodule update --init
+      - restore_cache:
+          name: restore deps
+          keys:
+            - infraops-go-cache-{{ checksum "go.sum" }}
+            - infraops-go-cache-
+      - run: make dep
+      - save_cache:
+          name: save deps
+          key: infraops-go-cache-{{ checksum "go.sum" }}
+          paths:
+            - /home/circleci/go/pkg/mod
+      - pulumi/login
+      - pulumi/preview:
+          stack: alexfalkowski/do/prod
+          working_directory: ~/infraops/area/do
+    resource_class: large
+  do_update:
+    docker:
+      - image: alexfalkowski/release:3.1
+    working_directory: ~/infraops
+    steps:
+      - checkout
+      - run: git submodule sync
+      - run: git submodule update --init
+      - restore_cache:
+          name: restore deps
+          keys:
+            - infraops-go-cache-{{ checksum "go.sum" }}
+            - infraops-go-cache-
+      - run: make dep
+      - save_cache:
+          name: save deps
+          key: infraops-go-cache-{{ checksum "go.sum" }}
+          paths:
+            - /home/circleci/go/pkg/mod
+      - pulumi/login
+      - pulumi/update:
+          stack: alexfalkowski/do/prod
+          working_directory: ~/infraops/area/do
+    resource_class: large
+
+  gh_preview:
+    docker:
+      - image: alexfalkowski/go:1.22-ruby
+    working_directory: ~/infraops
+    steps:
+      - checkout
+      - run: git submodule sync
+      - run: git submodule update --init
+      - restore_cache:
+          name: restore deps
+          keys:
+            - infraops-go-cache-{{ checksum "go.sum" }}
+            - infraops-go-cache-
+      - run: make dep
+      - save_cache:
+          name: save deps
+          key: infraops-go-cache-{{ checksum "go.sum" }}
+          paths:
+            - /home/circleci/go/pkg/mod
+      - pulumi/login
+      - pulumi/preview:
+          stack: alexfalkowski/gh/prod
+          working_directory: ~/infraops/area/gh
+    resource_class: large
+  gh_update:
+    docker:
+      - image: alexfalkowski/release:3.1
+    working_directory: ~/infraops
+    steps:
+      - checkout
+      - run: git submodule sync
+      - run: git submodule update --init
+      - restore_cache:
+          name: restore deps
+          keys:
+            - infraops-go-cache-{{ checksum "go.sum" }}
+            - infraops-go-cache-
+      - run: make dep
+      - save_cache:
+          name: save deps
+          key: infraops-go-cache-{{ checksum "go.sum" }}
+          paths:
+            - /home/circleci/go/pkg/mod
+      - pulumi/login
+      - pulumi/update:
+          stack: alexfalkowski/gh/prod
+          working_directory: ~/infraops/area/gh
+    resource_class: large
+
 workflows:
   infraops:
     jobs:
@@ -162,6 +216,32 @@ workflows:
       - release:
           requires:
             - build
+          filters:
+            branches:
+              only: master
+  cf:
+    when: << pipeline.parameters.cf >>
+    jobs:
+      - cf_preview:
+          context: infraops
+          filters:
+            branches:
+              ignore: master
+      - cf_update:
+          context: infraops
+          filters:
+            branches:
+              only: master
+  do:
+    when: << pipeline.parameters.do >>
+    jobs:
+      - do_preview:
+          context: infraops
+          filters:
+            branches:
+              ignore: master
+      - do_update:
+          context: infraops
           filters:
             branches:
               only: master
@@ -174,20 +254,6 @@ workflows:
             branches:
               ignore: master
       - gh_update:
-          context: infraops
-          filters:
-            branches:
-              only: master
-
-  cf:
-    when: << pipeline.parameters.cf >>
-    jobs:
-      - cf_preview:
-          context: infraops
-          filters:
-            branches:
-              ignore: master
-      - cf_update:
           context: infraops
           filters:
             branches:
