--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -214,53 +214,27 @@ jobs:
 
   k8s_preview:
     docker:
-      - image: alexfalkowski/go:1.22-ruby
+      - image: alexfalkowski/k8s:1.0
     working_directory: ~/infraops
     steps:
       - checkout
       - run: git submodule sync
       - run: git submodule update --init
-      - restore_cache:
-          name: restore deps
-          keys:
-            - infraops-go-cache-{{ checksum "go.sum" }}
-            - infraops-go-cache-
-      - run: make dep
-      - save_cache:
-          name: save deps
-          key: infraops-go-cache-{{ checksum "go.sum" }}
-          paths:
-            - /home/circleci/go/pkg/mod
-      - run: doctl kubernetes cluster kubeconfig save $DIGITALOCEAN_CLUSTER_ID
-      - pulumi/login
-      - pulumi/preview:
-          stack: alexfalkowski/k8s/prod
-          working_directory: ~/infraops/area/k8s
+      - run: make -C area/k8s save-config
+      - run: make -C area/k8s setup
+      - run: make -C area/k8s preview
     resource_class: large
   k8s_update:
     docker:
-      - image: alexfalkowski/go:1.22-ruby
+      - image: alexfalkowski/k8s:1.0
     working_directory: ~/infraops
     steps:
       - checkout
       - run: git submodule sync
       - run: git submodule update --init
-      - restore_cache:
-          name: restore deps
-          keys:
-            - infraops-go-cache-{{ checksum "go.sum" }}
-            - infraops-go-cache-
-      - run: make dep
-      - save_cache:
-          name: save deps
-          key: infraops-go-cache-{{ checksum "go.sum" }}
-          paths:
-            - /home/circleci/go/pkg/mod
-      - run: doctl kubernetes cluster kubeconfig save $DIGITALOCEAN_CLUSTER_ID
-      - pulumi/login
-      - pulumi/update:
-          stack: alexfalkowski/k8s/prod
-          working_directory: ~/infraops/area/k8s
+      - run: make -C area/k8s save-config
+      - run: make -C area/k8s setup
+      - run: make -C area/k8s update
     resource_class: large
 
 workflows:
