--- a/area/apps/standort.yml
+++ b/area/apps/standort.yml
@@ -69,7 +69,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: standort-gtpc
+  name: standort-grpc
   namespace: standort
   annotations:
     nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
