--- a/area/apps/standort/server.yml
+++ b/area/apps/standort/server.yml
@@ -1,4 +1,17 @@
 environment: production
+client:
+  v1:
+    host: localhost:9090
+    user_agent: "Standort/1.0"
+    retry:
+      timeout: 10s
+      attempts: 3
+  v2:
+    host: localhost:9090
+    user_agent: "Standort/2.0"
+    retry:
+      timeout: 10s
+      attempts: 3
 health:
   duration: 1s
   timeout: 1s
