feat(k8s): add cert-manager

--- a/area/k8s/Makefile
+++ b/area/k8s/Makefile
@@ -4,15 +4,18 @@ save-config:
 
 # Setup all repos.
 setup:
-	helm repo add nginx-stable https://helm.nginx.com/stable
+	helm repo add nginx-stable https://helm.nginx.com/stable --force-update
+	helm repo add jetstack https://charts.jetstack.io --force-update
 	helm repo update
 
 # Preview deps.
 preview:
 	helm install nginx-ingress-release nginx-stable/nginx-ingress --namespace nginx-ingress --create-namespace --dry-run
+	helm install cert-manager-release jetstack/cert-manager --namespace cert-manager --create-namespace --version v1.14.5 --set installCRDs=true --dry-run
 
 
 # Update deps.
 update:
 	helm install nginx-ingress-release nginx-stable/nginx-ingress --namespace nginx-ingress --create-namespace
+	helm install cert-manager-release jetstack/cert-manager --namespace cert-manager --create-namespace --version v1.14.5 --set installCRDs=true
 
