fix(apps): add backend-protocol for grpc

--- a/area/apps/standort/ingress.yaml
+++ b/area/apps/standort/ingress.yaml
@@ -22,6 +22,8 @@ kind: Ingress
 metadata:
   name: standort-grpc
   namespace: standort
+  annotations:
+    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
 spec:
   ingressClassName: nginx
   rules:
