--- a/area/apps/standort/service.yaml
+++ b/area/apps/standort/service.yaml
@@ -38,6 +38,13 @@ spec:
             port: 8080
           initialDelaySeconds: 3
           periodSeconds: 3
+        resources:
+          requests:
+            cpu: 125m
+            memory: 64Mi
+          limits:
+            cpu: 250m
+            memory: 128Mi
 ---
 apiVersion: v1
 kind: Service
