fix(apps): use version

--- a/area/apps/standort/service.yaml
+++ b/area/apps/standort/service.yaml
@@ -19,7 +19,7 @@ spec:
             name: standort-config
       containers:
       - name: standort
-        image: docker.io/alexfalkowski/standort:latest
+        image: docker.io/alexfalkowski/standort:v2.79.4
         imagePullPolicy: Always
         args: ["server"]
         volumeMounts:
