--- a/area/apps/Makefile
+++ b/area/apps/Makefile
@@ -1,3 +1,5 @@
+otlp_secret := $(shell echo -n "790760:$(GRAFANA_OTLP_TOKEN)" | base64 -w 0)
+
 # Save kubeconfig.
 save-config:
 	doctl kubernetes cluster kubeconfig save f7a7f2b2-f562-49fe-93e7-2b6ef3038fa5
@@ -7,6 +9,10 @@ delete: delete-standort
 
 # Setup all apps.
 setup: setup-standort
+
+# Setup otlp.
+setup-otlp:
+	kubectl create secret generic otlp-secret --from-literal=token=$(otlp_secret) --namespace $(namespace)
 
 # Delete standort.
 delete-standort:
