--- a/area/apps/standort/config.yaml
+++ b/area/apps/standort/config.yaml
@@ -32,7 +32,13 @@ data:
       logger:
         level: info
       metrics:
-        kind: prometheus
+        kind: otlp
+        host: https://otlp-gateway-prod-eu-west-2.grafana.net/otlp
+        key: env:STANDORT_OTLP_KEY
+      tracer:
+        kind: otlp
+        host: https://otlp-gateway-prod-eu-west-2.grafana.net/otlp
+        key: env:STANDORT_OTLP_KEY
     transport:
       http:
         port: 8080
