--- a/area/apps/standort/service.yaml
+++ b/area/apps/standort/service.yaml
@@ -19,7 +19,7 @@ spec:
             name: standort-config
       containers:
       - name: standort
-        image: docker.io/alexfalkowski/standort:v2.80.0
+        image: docker.io/alexfalkowski/standort:v2.81.0
         imagePullPolicy: Always
         args: ["server"]
         volumeMounts:
@@ -29,6 +29,11 @@ spec:
         env:
           - name: STANDORT_CONFIG_FILE
             value: "/etc/standort/server.yaml"
+          - name: STANDORT_OTLP_KEY
+            valueFrom:
+              secretKeyRef:
+                name: otlp-secret
+                key: token
         ports:
           - containerPort: 8080
           - containerPort: 9090
