--- a/area/apps/standort/config.yaml
+++ b/area/apps/standort/config.yaml
@@ -1,54 +1,35 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: standort-config
+  name: konfig-config
   namespace: standort
 data:
-  server.yaml: |
-    environment: production
+  client.yaml: |
     client:
       v1:
-        host: localhost:9090
-        user_agent: "Standort/1.0"
-        retry:
-          timeout: 10s
-          attempts: 3
-      v2:
-        host: localhost:9090
+        host: konfig.konfig.svc.cluster.local:9090
         user_agent: "Standort/2.0"
+        timeout: 1s
         retry:
           timeout: 10s
           attempts: 3
-    health:
-      duration: 1s
-      timeout: 1s
-    limiter:
-      kind: user-agent
-      pattern: 1000-S
-    location:
-      ip:
-        kind: ip2location
+        application: standort
+        version: v1.0.0
+        environment: production
+        continent: '*'
+        country: '*'
+        command: server
+        kind: yaml
+        mode: 0o600
+    environment: production
     telemetry:
       logger:
         level: info
       metrics:
         kind: otlp
         host: https://otlp-gateway-prod-eu-west-2.grafana.net/otlp/v1/metrics
-        key: env:STANDORT_OTLP_KEY
+        key: env:KONFIG_OTLP_KEY
       tracer:
         kind: otlp
         host: https://otlp-gateway-prod-eu-west-2.grafana.net/otlp/v1/traces
-        key: env:STANDORT_OTLP_KEY
-    transport:
-      http:
-        port: 8080
-        user_agent: "Standort/2.0"
-        retry:
-          timeout: 2s
-          attempts: 3
-      grpc:
-        port: 9090
-        user_agent: "Standort/2.0"
-        retry:
-          timeout: 2s
-          attempts: 3
+        key: env:KONFIG_OTLP_KEY
