fix(apps): use args for standort-init

--- a/area/apps/standort/service.yaml
+++ b/area/apps/standort/service.yaml
@@ -24,7 +24,7 @@ spec:
       initContainers:
         - name: standort-init
           image: docker.io/alexfalkowski/konfig:v1.121.0
-          command: ["client"]
+          args: ["client"]
           volumeMounts:
             - name: konfig-volume
               mountPath: /etc/konfig/client.yaml
