fix(bezeichner): make sure we release

--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -76,7 +76,7 @@ jobs:
       - checkout
       - run: git submodule sync
       - run: git submodule update --init
-      - run: make -C area/apps save-config preview-standort preview-konfig
+      - run: make -C area/apps save-config preview-standort preview-konfig preview-bezeichner
     resource_class: large
   apps_update:
     docker:
@@ -86,7 +86,7 @@ jobs:
       - checkout
       - run: git submodule sync
       - run: git submodule update --init
-      - run: make -C area/apps save-config update-standort update-konfig
+      - run: make -C area/apps save-config update-standort update-konfig update-bezeichner
     resource_class: large
 
   cf_preview:
